# craton

./: .coveragerc  .gitignore  .gitreview  .travis.yml  .zuul.yaml  CONTRIBUTING.rst  Dockerfile  HACKING.rst  README.md  README.rst  bindep.txt  requirements.readthedocs.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
api-ref/source/v1/: cells.inc  hosts.inc  index.rst  parameters.yaml  regions.inc
api-ref/swagger/: swagger-inventory-api.yaml
craton/: _i18n.py  exceptions.py  states.py  util.py
craton/api/: README.rst  __init__.py  middleware.py
craton/api-ref/swagger/: swagger-inventory-api.yaml
craton/api/v1/: __init__.py  base.py  routes.py  schemas.py  utils.py  validators.py
craton/cmd/: README.rst  craton-api.py  dbsync.py  inventory-api.py  worker.py
craton/db/: __init__.py  api.py
craton/inventory/: README.rst  api.py  exceptions.py
craton/tests/: __init__.py  test_craton.py
craton/workflow/: ansible.py  base.py  testflow.py  worker.py
doc/source/: api-reference.rst  arch-diagram.dot  architecture.rst  cells.rst  conf.py  craton-inventory-api.rst  cratoncli.rst  database.dot  docker-install.rst  filtering-by-variables.rst  high-level-design.rst  hosts.rst  index.rst  installation.rst  keystone.rst  network-devices.rst  network-interfaces.rst  networks.rst  regions.rst  usage.rst
etc/: craton-api-conf.sample  craton-api-paste.ini  inventory-api-conf.sample  inventory-api-paste.ini
tools/: craton-inventory.py  cratonclient_with_keystone.py  docker_run.sh  generate_fake_data.py  test-setup.sh  wrapper-functions.sh
(+104 files in other folders)
