[metadata]
name = craton
summary = Platform for fleet management for OpenStack.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://craton.readthedocs.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    craton

[entry_points]
console_scripts =
    craton-worker = craton.cmd.worker:main
    craton-inventory-dbsync =  craton.cmd.dbsync:main

craton.workflow =
    testflow = craton.workflow.testflow:TestFlow

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = craton/locale
domain = craton

[update_catalog]
domain = craton
output_dir = craton/locale
input_file = craton/locale/craton.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = craton/locale/craton.pot
